--- a/crops.html
+++ b/crops.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Crops</h1>
         <a href="index.html">Back to Main Page</a>
+        <a href="#top" class="back-to-top">Back to Top</a>
     </header>
 
     <nav>
